@@ -4,6 +4,4 @@ require ["fileinto"];
 if header :is "X-Spam-Flag" "YES"
 {
     fileinto "Junk";
-    stop;
 }
-
