@@ -171,8 +171,12 @@ plugin {
 
     # Global sieve settings.
     sieve_global_dir = PH_SIEVE_DIR
-    sieve_default = PH_GLOBAL_SIEVE_FILE
-    #sieve_before =
+    # Note: if user has personal sieve script, global sieve rules defined in
+    #       sieve_default will be ignored. Please use sieve_before or
+    #       sieve_after instead.
+    #sieve_default =
+
+    sieve_before = PH_GLOBAL_SIEVE_FILE
     #sieve_after =
 
     # Reference: http://wiki2.dovecot.org/Plugins/MailboxAlias
